--- a/front-end/cmd/web/templates/footer.partial.gohtml
+++ b/front-end/cmd/web/templates/footer.partial.gohtml
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col text-center">
                 <hr>
-                <small class="text-muted">Copyright &copy; lipandr.io</small>
+                <small class="text-muted">Copyright &copy; <strong>lipandr.io</strong></small>
             </div>
         </div>
     </div>
